# flask-boilerplate

./: .editconfig  .env  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  test.db
app/: __init__.py  config.py  db.py  flask_app.py
app/apis/: __init__.py  demo_api.py  rest_api.py
app/blueprints/: __init__.py  demo.py  demo_bp.py
app/blueprints/json/: __init__.py
app/blueprints/log/: __init__.py
app/blueprints/templates/: demo.html
app/blueprints/views/: demo_view.py
app/config/: __init__.py  base.py  dev.py  prod.py  test.py
app/decorator/: __init__.py  common_response.py
app/middlewares/: __init__.py  base.py  demo.py  foo.py  json.py  test.py
app/models/: __init__.py  post.py  user.py
app/templates/demo/: index.html
commands/: __init__.py  db.py  env.py  hello.py
commands/blueprints/: __init__.py  demo.py
