[tool.poetry]
name = "flask-boilerplate"
version = "0.0.2"
description = "flask boilerplate"
authors = ["Rui Ma <xjmarui@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "1.1.1"
python-dotenv = "0.10.3"
flask-sqlalchemy = "2.4.1"
flask-restplus = "0.13.0"
Werkzeug = "0.16.1"
autopep8 = "^1.5.1"
click = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
