[tool.poetry]
name = "flask-boilerplate"
version = "0.0.4"
description = "flask boilerplate"
authors = ["Rui Ma <xjmarui@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.1.2"
python-dotenv = "^0.20.0"
flask-sqlalchemy = "^2.5.1"
flask-restx = "0.5.1"
click = "^8.1.3"
Flask-Session = "^0.4.0"
redis = "^4.2.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
